# agentic-solver

./: .gitignore  README.md  pyproject.toml
problems/: example.json
src/agentic_solver/: __init__.py  config.py  execution_logs.py  main.py
src/agentic_solver/agents/: __init__.py  model_builder.py  solver_selector.py
src/agentic_solver/mcp_server/: __init__.py  server.py  session.py
src/agentic_solver/mcp_server/backends/: __init__.py  asp.py  base.py  minizinc.py  prolog.py
tests/: test_execution_logs.py  test_main.py  test_model_builder.py  test_solver_selector.py
tests/mcp/: test_backends.py  test_server.py  test_session.py
