[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-solver"
version = "0.1.0"
description = "Agentic system for selecting and orchestrating symbolic solvers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "torch>=2",
    "transformers>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
agentic-solver = "agentic_solver.main:main"

[tool.setuptools.packages.find]
where = ["src"]
